--- a/moonwave.toml
+++ b/moonwave.toml
@@ -1,7 +1,7 @@
 title = "Repli"  # From Git
-gitRepoUrl = "https://github.com/kumarion/repli" # From Git
+gitRepoUrl = "https://github.com/Kumarion/Repli" # From Git
 
-gitSourceBranch = "master"
+gitSourceBranch = "main"
 changelog = true
 
 [[classOrder]]
@@ -20,7 +20,7 @@ onBrokenMarkdownLinks = "warn"
 organizationName = "Kumarion"
 projectName = "Repli"
 url = "https://kumarion.github.io"
-baseUrl = "/repli/"
+baseUrl = "/Repli/"
 tagline = "Your project's tagline"
 
 [footer]
