Changed names so its more clear

--- a/default.project.json
+++ b/default.project.json
@@ -11,14 +11,14 @@
 
     "ServerScriptService": {
       "Server": {
-        "$path": "src/server"
+        "$path": "src/serverExamples"
       }
     },
 
     "StarterPlayer": {
       "StarterPlayerScripts": {
         "Client": {
-          "$path": "src/client"
+          "$path": "src/clientExamples"
         }
       }
     },
