Updated linting workflow

--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -28,4 +28,4 @@ jobs:
         run: selene generate-roblox-std
 
       - name: Source checking with Selene
-        run: selene src
+        run: selene
